Global content and slides refactoring
First refactoring steps to make sure all content is going to fit in one
and a half hour. It is still very difficult to decide which slides are
going to be removed and which ones need to be extended. Updates include:

Added vectrex raster graphics, updated comparison tables, fixed some
typo's, assembly example reformatted for consistency. Also removed
irrelevant details which only will confuse attendees.

Synchronized thanks content. Tapes and Floppy slides updated. Also tried
to use as many feedback I've received from different people. Fixed the
programming contests and HVSC and pouet slides as well including
mentioning in Dutch only version about `colloqiumpunten'.

Finally, some slides were text was falling of have been corrected.

--- a/graphics.tex
+++ b/graphics.tex
@@ -1,8 +1,13 @@
 \begin{frame}
-\frametitle{Graphics}
+\frametitle[fragile]{Graphics}
 
 \begin{figure}
-\includegraphics[width=0.5\linewidth]{images/palette.png}
+	\begin{subfigure}[b]{0.4\textwidth}
+		\includegraphics[width=\linewidth]{images/sbm_obey.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.5\textwidth}
+		\includegraphics[width=\linewidth]{images/nyan.png}
+	\end{subfigure}
 \end{figure}
 
 \end{frame}
@@ -10,12 +15,12 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Graphics}
+\frametitle{Graphics - Analoog}
 
 \begin{itemize}
-\item 320x200 pixels
-\item 16 kleuren palette
-\item Maximaal 2 of 4 kleuren per 8x8 blok.
+\item Vectrex
+\item Geen pixels, maar SVG
+\item Monochroom: helderheid
 \end{itemize}
 
 \end{frame}
@@ -27,14 +32,27 @@
 
 \begin{tabular}{|l|l|l|}
 \hline Model & Video & Kleuren \\
-PET & ??? & 1 \\
-VIC-20 & VIC I & 4-16??? \\
+PET & geen (CPU) & 1 \\
+VIC-20 & VIC I & 16 \\
 C64 & VIC II & 16 \\
-Apple ][ & ??? & 1-4 \\
-IBM PC & mono of CGA & 1-4 \\
+Apple ][ & geen (CPU, TTL) & 1 of 4 \\
+IBM PC & mono of CGA & 1 of 4 \\
 ZX Spec. & geen (CPU) & 8 \\ \hline
+VCS & TIA & verschilt \\
+Vectrex & VIA & geen: helderheid \\
 NES & Ricoh 2C02 PPU & 52 \\ \hline
 \end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Graphics - C64}
+
+\begin{figure}
+\includegraphics[width=0.5\linewidth]{images/palette.png}
+\end{figure}
 
 \end{frame}
 
@@ -69,53 +87,11 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Graphics}
-
-\begin{itemize}
-\item Scherm tekstdata vanaf \$0400 (== 1024)
-\item Color RAM vanaf \$D800 (== 55296)
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Graphic modes}
-
-\begin{itemize}
-\item Standard Character (text) Mode
-\item Multicolor Character (text) Mode
-\item Standard Bitmap Mode
-\item Multicolor Bitmap Mode
-\item Extended Background Color Mode
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Multicolor Character Mode}
+\frametitle{PETSCII - Tekst Mode}
 
 \begin{figure}
 \includegraphics[width=0.5\linewidth]{images/gary.png}
 \end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Standard Bitmap}
-
-\begin{figure}
-\includegraphics[width=0.5\linewidth]{images/sbm_obey.png}
-\end{figure}
-
-\begin{center}
-Source: Archmage
-\end{center}
 
 \end{frame}
 
@@ -131,51 +107,6 @@ Source: Archmage
 \begin{center}
 Source: Duce
 \end{center}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Graphics Programming}
-
-\begin{itemize}
-\item Eigen grafische driver schrijven
-\item 64 bytes (17 ongebruikt)
-\item Dus 47 registers
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{VIC registers}
-
-\begin{tabular}{|l|l|}
-\hline Doel & \# Registers \\ \hline
-% spr[0-7]x, spr[0-7]y, sprxh, spre, sdh, sdw, smc, sprio
-% 8 + 8 + 6
-Sprites & 22 \\
-% cse0, cse1
-Sprite color & 10 \\
-% cbor, cbkg, cbe0, cbe1, cbe2
-Border/Foreground color & 5 \\
-% ssc, sbkc
-Collision Detection & 2 \\
-% 1 MC mode & screen width etc.
-% 1 screen height & text/bitmap etc.
-% scrc0, scrc1
-Screen control & 2 \\
-% 1 current raster line
-% crl, isr, icr
-Interrupt control & 3 \\
-% msr
-Memory setup & 1 \\
-% 2 lightpen
-% lpx, lpy
-Light pen & 2 \\ \hline
-\end{tabular}
 
 \end{frame}
 
@@ -208,7 +139,7 @@ Light pen & 2 \\ \hline
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Bleeding bij MSX}
+\frametitle{Color clash bij MSX}
 
 \begin{figure}
 \includegraphics[width=0.5\linewidth]{images/bleeding.png}
@@ -239,14 +170,8 @@ Light pen & 2 \\ \hline
 \includegraphics[width=0.5\linewidth]{images/sprdwh.png}
 \end{figure}
 
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Great Giana Sisters}
-
 \begin{itemize}
+\item Great Giana Sisters
 \item Lijkt op Super Mario Bros
 \item 33 stages
 \end{itemize}
@@ -258,10 +183,9 @@ Light pen & 2 \\ \hline
 \begin{frame}
 \frametitle{Graphics Hacking}
 
-\begin{itemize}
-\item CRT signaleert HSYNC, VSYNC
-\item Raster Interrupts
-\end{itemize}
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/raster.png}
+\end{figure}
 
 \end{frame}
 
