--- a/thanks_en.tex
+++ b/thanks_en.tex
@@ -17,7 +17,7 @@
 \item devil.iki.fi
 \item famitracker.com
 \item freeinfosociety.com
-\item granishmusicproduction.com
+\item granishmusicproduction. com
 \item history-computer.com
 \item id.scene.org
 \item ieee.org
@@ -72,6 +72,7 @@
 
 \begin{itemize}
 \item Duncan
+\item fgenesis
 \item fieserWolf
 \item Ron van Schaik
 \item Wilfred Bos
@@ -82,12 +83,36 @@
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{Special Thanks to - Preview Testers}
+
+\begin{itemize}
+\item Bert
+\item Boaz
+\item Brian
+\item Jelle
+\item Kees
+\item Otto
+\item Sander
+\item Teun
+\item Tjaard
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
 \frametitle{Special Thanks to - gfx}
 
+\begin{multicols}{2}
 \begin{itemize}
 % breadbin comic
 \item Bart van Tieghem
+% vectrex
+\item Evan-Amos
 \item Bill Bertram
+% CRT raster scan
+\item Ian Harvey
 \item Jozef Galanda
 % bleeding MSX
 \item Marco L
@@ -103,6 +128,7 @@
 % great giana sisters - sprite vergroesserung
 \item Werner
 \end{itemize}
+\end{multicols}
 
 \end{frame}
 
