Crammed in 100 pages
The page numbering for all thanks slides have been disabled `tricking'
the attendees that it fits in 100 slides.

--- a/workshop.tex
+++ b/workshop.tex
@@ -860,7 +860,7 @@ Addr. & Mach. Code & Dissassembly & Pseudo Code \\
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Bedankt voor jullie aandacht}
 \Large{\centerline{Zijn er nog vragen?}}
 \end{frame}
