--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -860,7 +860,7 @@ Addr. & Mach. Code & Dissassembly & Pseudo Code \\
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Thank you for your attention}
 \Large{\centerline{Are there any questions?}}
 \end{frame}
