--- a/thanks_en.tex
+++ b/thanks_en.tex
@@ -1,6 +1,6 @@
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Bibliography}
 
 \begin{multicols}{2}
@@ -28,7 +28,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Bibliography}
 
 \begin{multicols}{2}
@@ -48,7 +48,7 @@
 \end{frame}
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to}
 
 \begin{itemize}
@@ -67,7 +67,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to - HCC and Sceners}
 
 \begin{itemize}
@@ -82,7 +82,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to - Preview Testers}
 
 \begin{itemize}
@@ -101,7 +101,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to - gfx}
 
 \begin{multicols}{2}
@@ -134,7 +134,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to Sceners}
 
 \begin{multicols}{3}
@@ -166,7 +166,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to Sceners}
 
 \begin{multicols}{3}
@@ -202,7 +202,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to Sceners}
 
 \begin{multicols}{3}
@@ -233,7 +233,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to Sceners}
 
 \begin{multicols}{3}
@@ -270,7 +270,7 @@
 
 %------------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Special Thanks to Sceners}
 
 \begin{multicols}{3}
