Clever page numbering

--- a/workshop.tex
+++ b/workshop.tex
@@ -33,7 +33,7 @@
 
 \end{titelframe}
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Inhoudsopgave}
 \tableofcontents
 \end{frame}
@@ -49,7 +49,7 @@
 
 %----------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Beperkte Omgevingen}
 
 \begin{itemize}
@@ -711,7 +711,7 @@ Addr. & Mach. Code & Dissassembly & Pseudo Code \\
 
 %----------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{X}
 
 \begin{itemize}
@@ -735,7 +735,7 @@ Addr. & Mach. Code & Dissassembly & Pseudo Code \\
 
 %----------------------------------------------
 
-\begin{frame}
+\begin{frame}[noframenumbering]
 \frametitle{Revision}
 
 \begin{itemize}
